@@ -5,6 +5,7 @@ ChangeLog for Matrix Brandy - as forked from Sourceforge after V1.20.1
 - System: Add '-tek' (or -t) option to enable Tek graphics for 'tbrandy'
   on compatible platforms. Equivalent to issuing SYS"Brandy_TekEnabled",1
 - System: Strict mode can now be set programmatically with SYS"Brandy_Strict".
+- System: Strip quotes from filenames in *LOAD and *SAVE
 - BASIC: LOCAL with no parameters now does nothing (as per Acorn) instead
   of reporting an error. This new behaviour is in place on a DEFAULT_IGNORE
   build unless -strict is set, or if -ignore is set.
